[package]
name = "grabthequest-commons"
version = "0.1.0"
authors = ["Giovanni Dejan <giovanni.dejan@binus.ac.id>"]
edition = "2018"

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.58"
# validator = { version = "0.11", features = ["derive"] }
